prueba-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment #nombre unico en kubernete
 # namespace: taller
  labels:
    app: whoami #informacion clave valor para luego aplicar ciertas caracteristicas
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
