prueba-service.yml
apiVersion: v1
kind: Service
metadata:
  name: servicio-whoiam
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
