prueba-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whoiam-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prueba.ceiba.com.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: servicio-whoiam
          servicePort: 80
